tests/invalid/missing_semicolon.c
int main() {
    return 1 || 2
}
// ERROR: Line 3, Error 2003